--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.tomcat.accesslog.enabled=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://dpg-cohbt9kf7o1s73fclaa0-a.oregon-postgres.render.com:5432/database_name
+spring.datasource.url=jdbc:postgresql://dpg-cohbt9kf7o1s73fclaa0-a.oregon-postgres.render.com:5432/database_render_patterns_dms_yf18
 spring.datasource.username= database_render_patterns_dms_yf18_user
 spring.datasource.password= ymD6vXQlQHYxPU6RS6YXI0zNsFZZ3i6W
 spring.datasource.driver-class-name=org.postgresql.Driver
